samples/_failures_safe/1761149290_5c5285_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80c4e182.c: In function ‘main’:
./samples/SAFE/__tmp_80c4e182.c:143:13: error: expected ‘:’ or ‘...’ at end of input
  143 |             case 2
      |             ^~~~
./samples/SAFE/__tmp_80c4e182.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80c4e182.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80c4e182.c:143:13: error: expected declaration or statement at end of input
